# python-package-template

./: .buildinfo  .gitconfig  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.html  CHANGELOG.md  Dockerfile.sphinx  Makefile  README.md  genindex.html  index.html  objects.inv  pyproject.toml  search.html  searchindex.js
.devcontainer/: devcontainer.json
.github/docker/: Dockerfile.dev  Dockerfile.prod  Dockerfile.sphinx
.github/workflows/: changelog.yaml  docker_image.yaml
_sources/: CHANGELOG.md.txt  index.rst.txt
docs/source/: conf.py  index.rst
docs/source/_static/css/: custom.css
src/pkg/: __init__.py
