[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "python-package-template"
version = "0.0.1"
description = "Add your description here"
authors = [
  {name = "Hsiang-Jen Li", email = "hsiangjenli@gmail.com"}
]
dependencies = []
readme = "README.md"
requires-python = ">= 3.12"

[tool.hatch.build.targets.wheel]
packages = ["src/pkg"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.rye]
managed = false
dev-dependencies = []
