[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hsiangjenli-python-package-template"
version = "0.0.11"
description = "Add your description here"
authors = [
  {name = "Hsiang-Jen Li", email = "hsiangjenli@gmail.com"}
]
dependencies = []
readme = "README.md"
requires-python = ">= 3.12"

[tool.hatch.build.targets.wheel]
packages = ["src/pkg"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.rye]
managed = false
dev-dependencies = []

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "ruff>=0.15.0",
]
sphinx = [
    "autodoc-pydantic[erdantic]>=2.2.0",
    "emoji>=2.15.0",
    "myst-parser>=5.0.0",
    "nbsphinx>=0.9.8",
    "pygraphviz>=1.14",
    "sphinx>=9.1.0",
    "sphinx-rtd-theme>=3.1.0",
    "sphinx-simplepdf>=1.7.0",
    "toml>=0.10.2",
]
